# CodeCoach

./: .gitignore  PLAN.md  README.md
backend/: .env.example  .gitignore  CMakeLists.txt  tmp_test.cpp
backend/include/: mongodb_manager.h  motor_eval.h  openai_client.h  rest_api.h  solution_analyzer.h
backend/src/: main.cpp  mongodb_manager.cpp  motor_eval.cpp  openai_client.cpp  rest_api.cpp  solution_analyzer.cpp
backend/tests/data/: logarithmic_loop.cpp  modulo_loop.cpp  multiplicative_loop.cpp  two_pointers_fake.cpp  two_pointers_valid.cpp
docs/: documentacion.md  prompts.md  sudoku-hard.json
frontend/: api.js  app.js  editor.js  index.html  styles.css
